# beat

./: .gitignore  Cargo.toml  LICENSE  README.md  beat.service.example  install.sh
src/: main.rs
src/commands/: clean.rs  list.rs  load.rs  mod.rs  next.rs  pause.rs  play.rs  prev.rs  repeat.rs  save.rs  stop.rs
src/errors/: errors.rs
src/messages/: messages.rs
