[package]
name = "beat"
version = "1.0.0"
authors = ["hypr2771"]
edition = "2024"
description = "A Discord music bot built in Rust"
repository = "https://github.com/hypr2771/beat-bot-rust"
license = "MIT"
keywords = ["discord", "music-bot", "rust"]

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-futures = "0.2.5"
reqwest = "0.12.15"
serde_json = "1.0.140"
serde = "1.0.219"
url = "2.5.4"

[dependencies.symphonia]
version = "0.5.4"
features = ["aac", "mp3", "isomp4", "alac"]

[dependencies.songbird]
version = "0.5.0"
features = ["builtin-queue", "serenity"]

[dependencies.serenity]
version = "0.12.4"
default-features = false
features = ["cache", "voice", "http", "rustls_backend", "collector"]

[dependencies.tokio]
version = "1.44.2"
features = ["macros", "rt-multi-thread", "signal", "sync"]
